cabal-version:      2.4
name:               miller
version:            0.1.0.0
synopsis:           Miller's algorithm for the Groth16 protocol of ZK-SNARKs

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Antonio Hernandez, Juan Salvador Magan, Agustin Salinas
maintainer:         antoniohg@me.com

-- A copyright notice.
-- copyright:
category:           Math
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Algebra, AlgebraPlutus, Params

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

-- test-suite miller-test
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          MyLibTest.hs
--     build-depends:    base ^>=4.14.3.0
